2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedParametersRule.cs: Don't report defects on methods
	that contains parameter inheriting from EventArgs. GUI apps use
	them a lot and, while not real "false positive", the method 
	signature is outside the developer's control so it cannot be 
	fixed (signature-wise) and rarely denotes a real problem. Fix
	bug #350288

2008-03-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededCallsOnStringRule.cs: Source file renamed from 
	AvoidToStringOnStringsRule.cs since the rule has been generalized
	to cover more similar cases. E.g. Clone(), Substring(0) and 
	ToString(IFormatProvider).
	* Makefile.am: Rename rule and test files.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Remove {0} from [Problem] attribute
	* AvoidUninstantiatedInternalClassesRule.cs: Remove unused parameter.

2008-02-16  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUnusedParametersRule.cs: Removed unused variable.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorRule.cs
	* IDisposableWithDestructorWithoutSuppressFinalizeRule.cs:
		Fix namespace change.

2008-02-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* Test/*.cs: Refactor the tests for accept the new rule's format.
	* *.cs: Adapt the rules to the new framework.
	* Makefile.am: Removed the -langversion:linq option. You should use at
	least the 1.9 gmcs version to compile.

2008-02-07  Nestor Salceda  <nestor.salceda@gmail.com>

	* DisposableTypesShouldHaveFinalizerRule.cs,
	FinalizersShouldCallBaseClassFinalizerRule.cs,
	FinalizersShouldBeProtectedRule.cs: Replaced TypeDefinition.GetFinalizer
	with TypeDefinition.GetMethod for avoid some warnings when compiling.

2008-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnsealedUninheritedInternalClassesRule.cs: New. Rule to check
	for non-sealed and non-visible types [Scott Peterson]