@@ -28,6 +28,8 @@
     <File name="UseIsOperatorRule.cs" subtype="Code" buildaction="Compile" />
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="AvoidUnneededCallsOnStringRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="ImplementEqualsTypeRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="OverrideValueTypeDefaultsRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
